[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Modelos_escenas/Animaciones/Anti_Muxxxe/idle02.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Modelos_escenas/Animaciones/Anti_Muxxxe/scream.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Modelos_escenas/Animaciones/Anti_Muxxxe/idle01.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Modelos_escenas/Animaciones/Anti_Muxxxe/running.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/muxxxe_disparable.gd" type="Script" id=5]
[ext_resource path="res://Assets/Modelos/Icosphere.mesh" type="ArrayMesh" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.431161, 0.32013, 0.365409 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.366403, 0.761183, 0.511924 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.19
emission_shape = 2
emission_box_extents = Vector3( 0.389, 0.56, -0.015 )
direction = Vector3( 0, 1.529, 1.142 )
spread = 34.32
initial_velocity = 5.05
linear_accel = 0.8
scale = 2.27
scale_random = 0.09

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 0.4, 1, 0.44 )
direction = Vector3( 0, 1.482, 1.584 )
spread = 38.53
initial_velocity = 4.21
angular_velocity = 1.19
scale = 0.12
scale_random = 0.29

[sub_resource type="SpatialMaterial" id=5]
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.933333, 0.152941, 0.0705882, 1 )

[sub_resource type="QuadMesh" id=6]
material = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=7]
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0, 0.27451, 1, 1 )

[sub_resource type="QuadMesh" id=8]
material = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0, 1, 0.368627, 1 )

[sub_resource type="QuadMesh" id=10]
material = SubResource( 9 )

[sub_resource type="SpatialMaterial" id=11]
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.980392, 0.0235294, 0.0235294, 1 )

[sub_resource type="QuadMesh" id=12]
material = SubResource( 11 )

[node name="muxxxe_disparable" type="KinematicBody"]
script = ExtResource( 5 )
corre_muxxxe = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.307043, 0 )
shape = SubResource( 1 )

[node name="idle01" parent="." instance=ExtResource( 3 )]

[node name="idle02" parent="." instance=ExtResource( 1 )]
visible = false

[node name="running" parent="." instance=ExtResource( 4 )]
visible = false

[node name="scream" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.737285, 0 )
shape = SubResource( 2 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.896605, 0 )
emitting = false
amount = 20
lifetime = 2.33
one_shot = true
explosiveness = 1.0
randomness = 0.45
process_material = SubResource( 3 )
draw_pass_1 = ExtResource( 7 )

[node name="Particles2" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.897855, 0 )
emitting = false
amount = 10
lifetime = 1.89
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )

[node name="Particles3" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.897855, 0 )
visible = false
emitting = false
amount = 10
lifetime = 1.89
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 8 )

[node name="Particles4" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.897855, 0 )
visible = false
emitting = false
amount = 10
lifetime = 1.89
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 10 )

[node name="Particles5" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.897855, 0 )
visible = false
emitting = false
amount = 10
lifetime = 1.89
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 12 )

[node name="OmniLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.960488, 0.278321, 0, -0.278321, 0.960488, 0, 2, 2.22387 )
light_color = Color( 1, 0.0941176, 0, 1 )
light_energy = 16.0
light_indirect_energy = 13.14
spot_range = 3.41125
spot_attenuation = 1.41422
spot_angle = 17.0
spot_angle_attenuation = 0.353554
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
